WebApp/k8s/environments/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sponspay-dev
  labels:
    name: sponspay-dev
