WebApp/k8s/environments/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sponspay-webapp
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: sponspay-webapp
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
